# dataclasstest

./: pyproject.toml
src/: dataclasscopytest.py  dctest.py  pydantictest.py  rcitem.py
