[tool.poetry]
name = "dataclasstest"
version = "0.1.0"
description = ""
authors = ["hsolbrig <solbrig@jhu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

